--- a/db/pom.xml
+++ b/db/pom.xml
@@ -9,16 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>ru.netology</groupId>
-            <artifactId>service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>db</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
