--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,11 @@
     <groupId>ru.netology</groupId>
     <artifactId>ModularProjectOnMaven</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>api</module>
+        <module>db</module>
+        <module>service</module>
     </modules>
 
     <packaging>pom</packaging>
