--- a/service/pom.xml
+++ b/service/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
+    <artifactId>service</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>ru.netology</groupId>
-            <artifactId>service</artifactId>
+            <artifactId>db</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
